--- a/gb/24/8/4/n14304378.md
+++ b/gb/24/8/4/n14304378.md
@@ -3,64 +3,66 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>河南政府诚信丧失 受害储户吁富士康不要投资</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/07/id14027000-Screen-Shot-2023-07-03-at-9.28.20-AM-600x400.png" />
-<h6>2023年7月2日，河南村镇银行的受害储户，聚集在河南开封的一座桥上维权，讨要存款。（视频截图）
-</h6>
+<h6>2023年7月2日，河南村镇银行的受害储户，聚集在河南开封的一座桥上维权，讨要存款。（视频截图）</h6>
 <hr>
 	<p>【大纪元2024年08月04日讯（大纪元记者李韵、熊斌采访报导）近日，台湾富士康宣布在河南部署重大投资后，河南村镇银行受害储户纷纷以各种方式提醒富士康谨慎投资，当心血本无归，但却遭警察的威胁恐吓。</p>
-<p>8月3日，河南村镇银行受害储户王先生告诉大纪元，富士康跟河南省政府签订了重大投资战略协议后，“我们受害储户，一直在给富士康打电话、发电子邮件，并联名公布重大风险警示函，律师储户也发布投资风险函。”（<strong>延伸阅读：<span style="color: #0000ff;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14303047.md#1?utm_term=djy_a_rec_in" target="_blank" rel="noopener">台湾商人投资大陆被坑 上网曝光中共官场黑暗</a></span></strong>）</p>
+<p>8月3日，河南村镇银行受害储户王先生告诉大纪元，富士康跟河南省政府签订了重大投资战略协议后，“我们受害储户，一直在给富士康打电话、发电子邮件，并联名公布重大风险警示函，律师储户也发布投资风险函。”（<strong>延伸阅读：<span style="color: #0000ff"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14303047.md#1?utm_term=djy_a_rec_in" target="_blank" rel="noopener nofollow noreferrer">台湾商人投资大陆被坑 上网曝光中共官场黑暗</a></span></strong>）</p>
 <p>王先生说：“我们提醒富士康到河南投资千万要谨慎，当心血本无归，是因为河南村镇银行已经非法冻结我们银联卡储户的活期存款，长达八百多天，一直不还。”</p>
 <p>2022年4月，河南、安徽多家村镇银行相继爆雷，40多万储户400亿元人民币的存款被冻结。同年7月，三千多名储户到郑州央行追讨存款，现场发生流血冲突事件。</p>
 <p>之后，北京银保监会介入调查。河南村镇银行开始对5万、10万、15万……50万元以下的储户进行分批垫付。但数千名大额储户的巨额存款至今未获分文垫付。</p>
 <p>两年多来，这些大额储户因讨要自己的巨额存款遭残酷打压，手机、汽车被定位，坐公交、地铁、飞机遭监控，甚至被抓捕殴打，非法拘禁，刑讯逼供等。</p>
 <p>在此情况下，台湾的跨国企业鸿海科技集团官网7月24日报导，其旗下的富士康同河南省政府签署“项目战略合作协议”，将在郑州投资建设新事业总部大楼，承载新事业总部功能。项目选址在郑东新区，投资约10亿元。</p>
 <p>网上曝光的录音中，一名河南村镇银行受害储户致电富士康说：“我们建议鸿海集团和河南省政府在合作的时候一定要谨慎，我们40万储户的合法存款，但都扣押不还，到现在一共是接近400多亿的存款。</p>
-<p>“我们每次去河南都遭受它的跟踪监视，就是不让你取款，也不让我们去法院起诉……富士康集团一定要谨慎在河南省进行投资。因为我们吃了河南的苦，希望你们集团不要在这方面再吃亏。”（<strong>延伸阅读：<span style="color: #0000ff;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/4/30/n14237702.md#1?utm_term=djy_a_rec_in" target="_blank" rel="noopener">苹果移出中国 视频显示南宁富士康几乎变空城</a></span></strong>）</p>
-<figure id="attachment_14304380" aria-describedby="caption-attachment-14304380" style="width: 1432px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14304380-173f749bb62f9227b12de9ae710f1d19.png"><img decoding="async" class="size-full wp-image-14304380" src="https://i.epochtimes.com/assets/uploads/2024/08/id14304380-173f749bb62f9227b12de9ae710f1d19.png" alt="" width="1432" b="804" /></a><figcaption id="caption-attachment-14304380" class="wp-caption-text">（网页截图）</figcaption></figure>
+<p>“我们每次去河南都遭受它的跟踪监视，就是不让你取款，也不让我们去法院起诉……富士康集团一定要谨慎在河南省进行投资。因为我们吃了河南的苦，希望你们集团不要在这方面再吃亏。”（<strong>延伸阅读：<span style="color: #0000ff"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/4/30/n14237702.md#1?utm_term=djy_a_rec_in" target="_blank" rel="noopener nofollow noreferrer">苹果移出中国 视频显示南宁富士康几乎变空城</a></span></strong>）</p>
+<figure id="attachment_14304380" aria-describedby="caption-attachment-14304380" style="width: 1432px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14304380-173f749bb62f9227b12de9ae710f1d19.png" rel="nofollow"><img decoding="async" class="size-full wp-image-14304380" src="https://i.epochtimes.com/assets/uploads/2024/08/id14304380-173f749bb62f9227b12de9ae710f1d19.png" alt="" width="1432" b="804"></a><figcaption id="caption-attachment-14304380" class="wp-caption-text">（网页截图）</figcaption></figure>
 <p>王先生表示：“河南政府通过行政手段，干预储户与银行间的经济纠纷，导致我们的合法存款一直取不出来，河南政府诚信丧失到河南投资风险极大。我们成千上万储户已经遭受灭顶之灾，所以说希望富士康选择有诚信的地方投资。”</p>
 <p>王先生透露，他们已经无数次向河南政府喊话，只要它们出具一份合法冻结存款手续给储户，所有的储户心甘情愿把存款全部捐给河南。</p>
 <p>然而，河南政府拒绝向储户出示任何手续，只是一味的出动警力对受害储户进行恐吓威胁。</p>
-<p>王先生说，他们提醒富士康谨慎投资河南也遭到警察恐吓，威胁他们不要再打电话给富士康。而各地警察对受害储户的威胁恐吓已经成为常态。</p>
+<p>王先生说，他们提醒富士康谨慎投资河南也遭到警察恐吓，威胁他们不要再打电话给富士康。而各地警察对受害储户的威胁恐吓已经成为常态。
+</p>
 <h2>河南警方要各地警察配合打压受害储户</h2>
-<p>8月2日，河南村镇银行受害储户韩先生告诉大纪元，他们8月1日收到一份其他省份警方的通话录音。</p>
+<p>
+8月2日，河南村镇银行受害储户韩先生告诉大纪元，他们8月1日收到一份其他省份警方的通话录音。</p>
 <p>在这份录音中，河南的警察每周都会定期给外省警察打电话，要求外省配合河南对全国分布在各省的受害储户进行稳控。截访全国三十多个省份的数千名河南村镇银行储户，不许去北京维权，不许去河南上访。</p>
 <p>录音中，河南省开封市祥符区公安局城关派出所的耿姓警察，给他所分包的5名储户所在的外省警察打电话，要求他们稳控这5名储户，不许去河南和北京上访喊冤。</p>
 <p>韩先生说，八百多天以来，河南政府从未妥善解决如何归还储户存款一事，而是一味的动用公权力，妨扰，恐吓和威胁受害储户，妄图通过这种方式，迫使他们放弃讨要自己的合法存款。</p>
 <p>韩先生认为，河南政府用当年毛泽东时代打土豪、分田地、杀地主方式，侵吞他们大额储户的存款，“我们数千名受害储户发誓，一定要聘请全国最强硬的律师来把河南政府抢存款事件彻底曝光，追回他们的存款”。</p>
 <p>责任编辑：方晓</p>
-<div class="related-article" style="display: block;"><span style="color: #000;font-weight:bold;">推荐阅读：</span></div>
-<ul class="related-posts"style="color: #0000ff; list-style: inside;">
-<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284584.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener">持有多少现金储蓄最合适？专家解析</a></span></li>
-<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/22/7/10/n13777471.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener">中国多地银行卡不能提款 银行声称防洗钱</a></span></li>
-<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/22/7/11/n13778412.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener">专家解读大陆村镇银行爆雷的来龙去脉</a></span></li>
-<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/24/5/5/n14241546.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener">河南事业编制大裁员 分析：中共真没钱了</a></span></li>
+<div class="related-article"><span style="color: #000;font-weight:bold">推荐阅读：</span></div>
+<ul class="related-posts" style="color: #0000ff">
+<li><span style="font-weight:bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284584.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener nofollow noreferrer">持有多少现金储蓄最合适？专家解析</a></span></li>
+<li><span style="font-weight:bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/22/7/10/n13777471.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener nofollow noreferrer">中国多地银行卡不能提款 银行声称防洗钱</a></span></li>
+<li><span style="font-weight:bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/22/7/11/n13778412.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener nofollow noreferrer">专家解读大陆村镇银行爆雷的来龙去脉</a></span></li>
+<li><span style="font-weight:bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/5/5/n14241546.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener nofollow noreferrer">河南事业编制大裁员 分析：中共真没钱了</a></span></li>
 </ul>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/22/n14100760.md#1">河南村镇银行储户上高速公路抗议 要求还钱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/1/n14127800.md#1">河南村镇银行受害人维权 现场近七十人被抓</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/7/n14131422.md#1">中国又一家村镇银行被解散</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264251.md#1">河南村镇银行爆雷 储户讨要储金被拘数月</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/4/n10889466.md#1" target="_blank">裴毅然：中共小知党（四）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/8/n11308403.md#1" target="_blank">我的父亲</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/18/n10492678.md#1" target="_blank">仰岳：共产党如何干扰美国的对华政策</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/24/n11405877.md#1" target="_blank">组图：反迫害20年 澳纽法轮功呼唤正义良知</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14545002.md#1">【直播】庆美国独立日 华府燃放烟火</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545646.md#1">吴谨言复出遇阻？传大陆演员35岁起禁演古偶剧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545808.md#1">在正确时间帮植物浇水 避免引发真菌疾病</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541355.md#1">你应该知道扁豆的所有健康益处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/8/4/n14304378.htm">河南政府诚信丧失 受害储户吁富士康不要投资</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304378.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
